--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,8 @@
   function powerMenu() {
     var menuBox = document.getElementById('powerMenu');
     if (menuBox.style.right == "0px") {
-        menuBox.style.right = "-150px";VLANS: 0
+        menuBox.style.right = "-150px";
+    } else {
         menuBox.style.right = "0px";
     }
   }
